<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_collapseMode="parallax">

    <com.smith.ufc.ui.views.NonScrollableViewPager
        android:id="@+id/arrow_non_view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark"
        android:clipToPadding="false"
        android:gravity="center"
        android:paddingLeft="36dp"
        android:paddingRight="36dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/arrow_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:padding="16dp"
            android:visibility="invisible"
            app:srcCompat="@drawable/ic_back" />


        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/arrow_front"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:padding="16dp"
            app:srcCompat="@drawable/ic_next" />
    </RelativeLayout>

</RelativeLayout>