<?xml version="1.0" encoding="utf-8"?>
<merge>


    <com.smith.ufc.ui.views.GridRecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:spanCount="3"
        app:layoutManager="com.smith.ufc.ui.manager.AnimatedGridLayoutManager"
        tools:listitem="@layout/holder_comic_view" />

</merge>