...
                    app:layout_collapseMode="pin"
                    app:navigationIcon="@drawable/ic_hamburger"
                    app:title="">


                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/search_bar"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/search_bg"
                        android:drawablePadding="8dp"
                        android:drawableStart="@drawable/ic_search_alt"
                        android:hint="@string/marvel"
...
